# gestion-eclairee

./: .aiignore  .gitignore  Procfile  README.md  gunicorn_conf.py  main.py  manage.py  pyproject.toml
gesec/: apps.py  asgi.py  logging.py  models.py  settings.py  urls.py  wsgi.py
gesec/common/: models.py
gesec/cpro/: build_download_list.py  checks.py  db.py  dj_models.py  download_cpro.py  exports_to_db.py  pipeline.py  schemas.py
gesec/data/: dj_models.py
gesec/data/pipeline/: db.py  launcher.py
gesec/data/pipeline/layer_1_bronze/: __init__.py  cpro_export_facture_xml.py  cpro_export_factures.py  oda_export_row.py  schemas.py  utils.py
gesec/data/pipeline/layer_2_silver/: __init__.py  cpro_export_factures.py  oda_export_ej_gm_mapping.py  schemas.py  services.py
gesec/data/pipeline/layer_3_gold/: __init__.py  facture.py  facture_ligne.py  factures.py  schemas.py
gesec/data/pipeline/testing/: dump.py  test.py
gesec/data/processors/cpro/: facture_x.py  facture_xml.py  pivots_xml.py
gesec/data/processors/cpro/models/: pivots_xml.py
gesec/data/processors/cpro/models/xsd/UBL-2.0/common/: CodeList_UnitCode_UNECE_7_04.xsd
gesec/data/processors/cpro/models/xsd/UBL-2.0/maindoc/: UBL-Invoice-2.0.xsd
gesec/data/sync/: build_download_list.py  checks.py  download_cpro.py
gesec/front/: asgi.py  context_processors.py  urls.py  views.py  wsgi.py
gesec/front/auth/: backends.py  views.py
gesec/management/commands/: launch_pipeline.py
gesec/migrations/: 0001_initial.py  0002_facture.py  0003_facture_gm_facture_gm_list_facture_gm_multi_and_more.py  0004_facture_ministere.py  0005_facture_montant_remise_globale_ttc_and_more.py
gesec/templates/gesec/: base.html  home.html
gesec/templates/gesec/auth/: login.html
gesec/templates/gesec/blocks/: footer.html  header.html
gesec/templatetags/: gesec.py
